fix format errors
