# app/predefinedroutine/serializers.py
@@ -1,9 +1,8 @@
+from predefinedroutine.models import PredefinedRoutine
 from rest_framework import serializers
-from PredefinedRoutine.models import PredefinedRoutine
 
 
 class PredfinedRoutineSerializer(serializers.ModelSerializer):
     class Meta:
         model = PredefinedRoutine
         exclude = ['image']
-
